[package]
name = "simulation_engine"
version = "0.1.0"
authors = ["Sam Aanhane"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.amethyst]
version = "0.15"
features = ["vulkan"]

[workspace]
members = ["example/bouncing_balls"]

# check https://github.com/amethyst/amethyst#dependencies for dependencies
